<resources>
    <string name="app_name">Agenda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="fecha">Fecha</string>
    <string name="comentarios">Comentarios</string>
    <string name="agregar">Agregar</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
</resources>